# wiki

./: .dockerignore  .gitignore  .prettierrc  .shellcheckrc  AGENTS.md  Dockerfile  Makefile  README.md  SETUP.md  SKILL.md  example-release.yml  install.sh  issue-formatting.md  issue-pypi.md  issue-random.md  lint.sh  package-lock.json  package.json  pyproject.toml  uninstall.sh  wiki
.github/workflows/: docker-publish.yml  install-test.yml  lint.yml  release.yml
agents/: Wikipedia.md
install/: skill.sh
skills/wikipedia/: SKILL.md
tests/: test_api.py  test_render.py
wiki_cli/: __init__.py  __version__.py  api.py  main.py  render.py
wiki_client/: __init__.py  __version__.py  api.py  hooks.py  main.py  render.py
