[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-cli"
version = "1.0.0"
description = "A CLI tool to fetch Wikipedia articles"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.0",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.scripts]
wiki = "wiki_cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
